--- a/config_control_collect/config.json
+++ b/config_control_collect/config.json
@@ -1,24 +1,24 @@
 {
-  "chassis": "10.165.153.243",
+  "chassis": "192.168.126.194",
   "username": "Xena",
   "password": "xena",
   "tcp_port": 22606,
   "enable_comm_logging": false,
   "resultdir_prefix": "results",
-  "delay_after_reset": 10,
-  "delay_after_traffic_on": 5,
-  "delay_after_traffic_off": 5,
-  "test_duration": 120,
+  "delay_after_reset": 30,
+  "pre_traffic_interval": 5,
+  "post_traffic_interval": 5,
+  "test_duration": 68400,
   "xpc_files": [
-      {"0/0": "0-0.xpc"},
-      {"0/1": "0-1.xpc"},
-      {"0/2": "0-2.xpc"},
-      {"0/3": "0-3.xpc"}
+      {"1/0": "ACY-1-0.xpc"},
+      {"1/1": "ACY-1-1.xpc"},
+      {"1/3": "ACY-1-3.xpc"},
+      {"1/4": "ACY-1-4.xpc"}
   ],
   "port_pairs": [
-      {"tx": "0/0", "rx": "0/1"},
-      {"tx": "0/1", "rx": "0/0"},
-      {"tx": "0/2", "rx": "0/3"},
-      {"tx": "0/3", "rx": "0/2"}
+      {"tx": "1/0", "rx": "1/1"},
+      {"tx": "1/1", "rx": "1/0"},
+      {"tx": "1/3", "rx": "1/4"},
+      {"tx": "1/4", "rx": "1/3"}
   ]
 }
